[package]
name = "greet_mime"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
greetd_ipc = { version = "0.9.0", features = ["sync-codec"] }
desktopparse = { path = "./desktopparse" }
once_cell = "1.17.1"
