[package]
name = "marine_cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
greetd_ipc = { version = "0.9.0", features = ["sync-codec"] }
desktopparse = { path = "../desktopparse"}
once_cell = "1.17.1"
slint = "1.0.2"
anyhow = "1.0.70"
xdg = "2.4.1"
thiserror = "1.0.40"
dialoguer = { version = "0.10.4", features = ["fuzzy-select"] }
rustyline = { version = "11.0.0", features = ["derive"]}
rpassword = "7.2.0"
