[package]
name = "marine_cli"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
greetd_ipc = { version = "0.9.0", features = ["sync-codec"] }
desktopparse = { path = "../desktopparse"}
once_cell = "1.18.0"
slint = "1.2.2"
anyhow = "1.0.75"
xdg = "2.5.2"
thiserror = "1.0.49"
dialoguer = { version = "0.11.0", features = ["fuzzy-select"] }
rustyline = { version = "12.0.0", features = ["derive"]}
rpassword = "7.2.0"
