[package]
name = "marine_cli"
version = "0.4.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
greetd_ipc = { version = "0.10.3", features = ["sync-codec"] }
desktopparse = { path = "../desktopparse" }
once_cell = "1.19.0"
anyhow = "1.0.86"
xdg = "2.5.2"
thiserror = "1.0.63"
dialoguer = { version = "0.11.0", features = ["fuzzy-select"] }
rustyline = { version = "14.0.0", features = ["derive"] }
rpassword = "7.3.1"
serde = { version = "1.0.204", features = ["derive"] }
toml = "0.8.15"
