[package]
name = "marine_gui"
version = "0.2.0"
edition = "2021"

build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
greetd_ipc = { version = "0.9.0", features = ["sync-codec"] }
desktopparse = { path = "../desktopparse"}
once_cell = "1.18.0"
slint = "1.2.2"
anyhow = "1.0.75"
xdg = "2.5.2"
thiserror = "1.0.49"

[build-dependencies]
slint-build = "1.2.2"
